Updated chart to align axes and change format the volume data axis correctly

--- a/examples/angular-example/css/charts.css
+++ b/examples/angular-example/css/charts.css
@@ -11,6 +11,7 @@
 
 .chart .bar path {
     stroke-width: 1.5;
+    stroke-linecap: round;
 }
 
 .chart .bar.up-day path {
